add model user to Models and show user_list in /

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -5,6 +5,10 @@
     <title>Task manager</title>
 </head>
 <body>
-<h2>Hello!</h2>
+<h2>Hello, Friend!</h2>
+<div id="user_list">
+    {% block user_list %}
+    {% endblock %}
+</div>
 </body>
 </html>
