--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -6,13 +6,32 @@
     {% load bootstrap4 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-
     <title>{% translate "Task manager" %}</title>
 </head>
 <body class="bg-light">
-<h2>{% translate "main_title" %}</h2>
-<div id="user_list">
-    {% block user_list %}
+<nav class="navbar navbar-expand-lg mb-3">
+{#<nav class="navbar" navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">#}
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">{% translate "Task manager" %}</a>
+    <div class="navbar-collapse offcanvas-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class = "nav-item ">
+            <a class="nav-item nav-link active" aria-current="page" href="#">{% translate "Users" %}</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class = "nav-item ">
+                <a class="nav-link active" href="#">{% translate "Enter" %}</a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link active" href="#">{% translate "Register" %}</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div id="page_content">
+    {% block page_content %}
     {% endblock %}
 </div>
 </body>
