--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -13,7 +13,10 @@
 {#<nav class="navbar" navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">#}
   <div class="container-fluid">
     <a class="navbar-brand" href="#">{% translate "Task manager" %}</a>
-    <div class="navbar-collapse offcanvas-collapse">
+        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="navbar-collapse offcanvas-collapse">
         <ul class="navbar-nav mr-auto">
             <li class = "nav-item ">
             <a class="nav-item nav-link active" aria-current="page" href="#">{% translate "Users" %}</a>
@@ -30,7 +33,7 @@
     </div>
 </nav>
 
-<div id="page_content">
+<div class = "container wrapper flex-grow-1" id="page_content">
     {% block page_content %}
     {% endblock %}
 </div>
