--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -12,22 +12,22 @@
 <nav class="navbar navbar-expand-lg mb-3">
 {#<nav class="navbar" navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">#}
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">{% translate "Task manager" %}</a>
+    <a class="navbar-brand" href="/">{% translate "Task manager" %}</a>
         <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
       <div class="navbar-collapse offcanvas-collapse">
         <ul class="navbar-nav mr-auto">
             <li class = "nav-item ">
-            <a class="nav-item nav-link active" aria-current="page" href="#">{% translate "Users" %}</a>
+            <a class="nav-item nav-link active" aria-current="page" href="/">{% translate "Users" %}</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class = "nav-item ">
-                <a class="nav-link active" href="#">{% translate "Enter" %}</a>
+                <a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a>
             </li>
             <li class = "nav-item">
-                <a class="nav-link active" href="#">{% translate "Register" %}</a>
+                <a class="nav-link active" href="{% url "user_add" %}">{% translate "Register" %}</a>
             </li>
         </ul>
     </div>
