--- a/task_manager/templates/users/edit.html
+++ b/task_manager/templates/users/edit.html
@@ -8,6 +8,6 @@
                 <p>{{ field.label_tag }}<br>{{ field }}</p>
             {% endfor %}
         </div>
-    <input type="submit" value="{% translate "submit" %}">
+    <input type="submit" value="{% translate "Refresh" %}">
     </form>
 {% endblock %}
