--- a/task_manager/templates/users/login.html
+++ b/task_manager/templates/users/login.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block page_content %}
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
+    {% if next %}
+        {% if user.is_authenticated %}
+            <p>Your account doesn't have access to this page. To proceed,
+            please login with an account that has access.</p>
+            {% else %}
+            <p>Please login to see this page.</p>
+        {% endif %}
+    {% endif %}
+
     <form method="post" action=".">
     {% csrf_token %}
         <div class = "form">
@@ -15,9 +27,11 @@
             {% endfor %}
                 <tr><td>           </td></tr>
                 <tr>
-                    <td><input type="submit" value="{% translate "Add user" %}"></td>
+                    <td><input type="submit" value="{% translate "login" %}"></td>
                 </tr>
+
             </table>
         </div>
+{#        {{ form.as_p }}#}
     </form>
 {% endblock %}
