--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -24,10 +24,17 @@
         </ul>
         <ul class="navbar-nav">
             <li class = "nav-item ">
-                <a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a>
+                {% if request.user.is_authenticated %}{{ request.user.username }}
+                {% else %}
+                    <a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a>
+                {% endif %}
             </li>
             <li class = "nav-item">
-                <a class="nav-link active" href="{% url "user_add" %}">{% translate "Register" %}</a>
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link active" href="{% url "user_logout" %}">{% translate "Logout" %}</a>
+                {% else %}
+                    <a class="nav-link active" href="{% url "user_add" %}">{% translate "Register" %}</a>
+                {% endif %}
             </li>
         </ul>
     </div>
