--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -41,8 +41,9 @@
 </nav>
 
 {% if messages %}
-    <div class = "flash_messages" id = "flash_messages">
-    <ul class="messages">
+{#    <div class = "flash_messages" id = "flash_messages">#}
+    <div class ="alert alert-success fade show">
+    <ul style="list-style: none;">
         {% for message in messages %}
         <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
             {{ message }}
