fix url(+reverse_lazy in views) accomplish with task

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -19,7 +19,7 @@
       <div class="navbar-collapse offcanvas-collapse">
         <ul class="navbar-nav mr-auto">
             <li class = "nav-item ">
-            <a class="nav-item nav-link active" aria-current="page" href="/">{% translate "Users" %}</a>
+            <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
             </li>
         </ul>
         <ul class="navbar-nav">
