--- a/task_manager/templates/users/login.html
+++ b/task_manager/templates/users/login.html
@@ -12,7 +12,7 @@
             <p>Please login to see this page.</p>
         {% endif %}
     {% endif %}
-
+    <h1 class="my-4"> {% translate "Enter" %}</h1>
     <form method="post" action=".">
     {% csrf_token %}
         <div class = "form">
