--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block page_content %}
+    <h1 class="my-4"> {{ header }}</h1>
     <form method="post" action=".">
     {% csrf_token %}
-        <p>{% translate "Are you sure delete" %} "{{ object }}" ?</p>
-    <input type="submit" value="{% translate "remove" %}">
+        <p>{{ message }} "{{ object }}"  ?</p>
+{#    <input type="submit" value="{% translate "remove" %}">#}
+    <input class="btn btn-primary" type="submit" value="{{ button_title }}">
     </form>
 {% endblock %}
