--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -17,10 +17,20 @@
             <span class="navbar-toggler-icon"></span>
         </button>
       <div class="navbar-collapse offcanvas-collapse">
-        <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav mr-auto">
             <li class = "nav-item ">
-            <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
+                <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
             </li>
+
+            <li class = "nav-item ">
+                <a class="nav-item nav-link active" aria-current="page" href="{% url "status_list" %}">{% translate "Statuses" %}</a>
+            </li>
+{##}
+{#            <li class = "nav-item ">#}
+{#                <a class="nav-item nav-link active" aria-current="page" href="{% url "mark_list" %}">{% translate "Marks" %}</a>#}
+{#            </li>#}
+
+
         </ul>
         <ul class="navbar-nav">
             <li class = "nav-item ">
