--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -22,19 +22,20 @@
                 <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
             </li>
 
+        {% if request.user.is_authenticated %}
             <li class = "nav-item ">
                 <a class="nav-item nav-link active" aria-current="page" href="{% url "status_list" %}">{% translate "Statuses" %}</a>
             </li>
-{##}
+
 {#            <li class = "nav-item ">#}
 {#                <a class="nav-item nav-link active" aria-current="page" href="{% url "mark_list" %}">{% translate "Marks" %}</a>#}
 {#            </li>#}
-
+        {% endif %}
 
         </ul>
         <ul class="navbar-nav">
             <li class = "nav-item ">
-                {% if request.user.is_authenticated %}{{ request.user.username }}
+                {% if request.user.is_authenticated %}
                 {% else %}
                     <a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a>
                 {% endif %}
