--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -30,6 +30,9 @@
 {#            <li class = "nav-item ">#}
 {#                <a class="nav-item nav-link active" aria-current="page" href="{% url "mark_list" %}">{% translate "Marks" %}</a>#}
 {#            </li>#}
+            <li class = "nav-item ">
+                <a class="nav-item nav-link active" aria-current="page" href="{% url "task_list" %}">{% translate "Tasks" %}</a>
+            </li>
         {% endif %}
 
         </ul>
