userapp: using __str__ in model

--- a/task_manager/templates/users/list.html
+++ b/task_manager/templates/users/list.html
@@ -14,7 +14,7 @@
             <tr>
                 <td> {{user.id}}</td>
                 <td> {{user.username}}</td>
-                <td> {{user.first_name }}  {{user.last_name}}</td>
+                <td> {{user}} </td>
                 <td> {{user.date_joined}}</td>
                 <td>
                     <a href = "{% url "user_update" user.id %}">{% translate "edit" %}</a><br>
