--- a/task_manager/templates/tasks/list.html
+++ b/task_manager/templates/tasks/list.html
@@ -6,15 +6,15 @@
     <table class = "table table-striped">
         <tr>
             <th>{{ ID }}</th>
-            <th>{{ name }}</th>
-            <th>{{ status }}</th>
-            <th>{{ author }}</th>
+            <th>{{ task_name }}</th>
+            <th>{{ status_name }}</th>
+            <th>{{ author_name }}</th>
         </tr>
         {% for task in object_list %}
             <tr>
                 <td> {{task.id}} </td>
                 <td><a href = "{% url "task_view" task.id %}">{{task.name}}</a></td>
-                <td> {{task.status}} </td>
+                <td> {{task.status.name}} </td>
                 <td> {{task.author}} </td>
             </tr>
         {% endfor %}
