--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -5,72 +5,19 @@
     {% load i18n %}
     {% load bootstrap4 %}
     {% bootstrap_css %}
-    {% bootstrap_javascript %}
+    {% bootstrap_javascript jquery=True %}
+    {% bootstrap_jquery %}
     <title>{% translate "Task manager" %}</title>
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg mb-3">
-  <div class="container-fluid">
-    <a class="navbar-brand" href={% url "root" %}>{% translate "Task manager" %}</a>
-        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-      <div class="navbar-collapse offcanvas-collapse">
-          <ul class="navbar-nav mr-auto">
-            <li class = "nav-item ">
-                <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
-            </li>
-
-        {% if request.user.is_authenticated %}
-            <li class = "nav-item ">
-                <a class="nav-item nav-link active" aria-current="page" href="{% url "status_list" %}">{% translate "Statuses" %}</a>
-            </li>
-            <li class = "nav-item ">
-                <a class="nav-item nav-link active" aria-current="page" href="{% url "mark_list" %}">{% translate "Marks" %}</a>
-            </li>
-            <li class = "nav-item ">
-                <a class="nav-item nav-link active" aria-current="page" href="{% url "task_list" %}">{% translate "Tasks" %}</a>
-            </li>
-        {% endif %}
-
-        </ul>
-        <ul class="navbar-nav">
-            <li class = "nav-item ">
-                {% if request.user.is_authenticated %}
-                {% else %}
-                    <a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a>
-                {% endif %}
-            </li>
-            <li class = "nav-item">
-                {% if request.user.is_authenticated %}
-                    <a class="nav-link active" href="{% url "user_logout" %}">{% translate "Logout" %}</a>
-                {% else %}
-                    <a class="nav-link active" href="{% url "user_add" %}">{% translate "Register" %}</a>
-                {% endif %}
-            </li>
-        </ul>
+{% include "nav.html" %}
+<main role="main" class="container">
+    <div class="mt-5 p-5 bg-white rounded shadow-sm">
+        {% bootstrap_messages %}
+        {% block page_content %}
+        {% endblock %}
     </div>
-  </div>
-</nav>
-
-<div class = "container wrapper flex-grow-1" id="page_content">
-{% if messages %}
-    <div class = "flash_messages" id = "flash_messages">
-    {% for message in messages %}
-        {% if message.level < 30 %}
-            <div class ="alert alert-success fade show">
-        {% else %}
-            <div class ="alert alert-danger fade show">
-        {% endif %}
-            {{ message }}
-            </div>
-    {% endfor %}
-
-    </div>
-{% endif %}
-    {% block page_content %}
-    {% endblock %}
-</div>
+</main>
 </body>
 </html>
 
