refactor add mt-3 class to submit buttons

--- a/task_manager/templates/marks/create.html
+++ b/task_manager/templates/marks/create.html
@@ -12,7 +12,7 @@
                 </div>
             {% endfor %}
                 <div class = "form-group">
-                    <input class="btn btn-primary" type="submit" value="{{ button_title }}">
+                    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
                 </div>
         </div>
     </form>
