--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -16,7 +16,7 @@
             {% endfor %}
                 <tr><td>           </td></tr>
                 <tr>
-                    <td><input class="btn btn-primary" type="submit" value="{{ button_title }}"></td>
+                    <td><input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}"></td>
                 </tr>
 
             </table>
