--- a/task_manager/templates/marks/delete.html
+++ b/task_manager/templates/marks/delete.html
@@ -5,6 +5,6 @@
     <form method="post" action=".">
     {% csrf_token %}
         <p>{{ message }} "{{ object.name }}"  ?</p>
-    <input class="btn btn-primary" type="submit" value="{{ button_title }}">
+    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
     </form>
 {% endblock %}
