--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -5,7 +5,6 @@
     <form method="post" action=".">
     {% csrf_token %}
         <p>{{ message }} "{{ object }}"  ?</p>
-{#    <input type="submit" value="{% translate "remove" %}">#}
-    <input class="btn btn-primary" type="submit" value="{{ button_title }}">
+    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
     </form>
 {% endblock %}
