refactor add mt-3 class to submit buttons

--- a/task_manager/templates/nav.html
+++ b/task_manager/templates/nav.html
@@ -25,7 +25,7 @@
     </ul>
     <ul class="navbar-nav">
             {% if request.user.is_authenticated %}
-                <li class = "nav-item active">{{ request.user.name }}</li>
+                <li class = "nav-item "><p class="nav-link active">{{ request.user.username }}</p></li>
                 <li class = "nav-item"><a class="nav-link active" href="{% url "user_logout" %}">{% translate "Logout" %}</a></li>
             {% else %}
                 <li class = "nav-item active"><a class="nav-link active" href="{% url "user_login" %}">{% translate "Enter" %}</a></li>
