nav.html add color for root

--- a/task_manager/templates/nav.html
+++ b/task_manager/templates/nav.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand mr-auto mr-lg-3 h2" href="{% url "root" %}">{% translate "Task manager" %}</a>
+    <a class="navbar-brand mr-auto mr-lg-3 h2 text-primary" href="{% url "root" %}">{% translate "Task manager" %}</a>
     <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
         <span class="navbar-toggler-icon"></span>
     </button>
