--- a/task_manager/templates/tasks/list.html
+++ b/task_manager/templates/tasks/list.html
@@ -1,8 +1,27 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
 {% block page_content %}
    <h1 class="my-4"> {{ header }}</h1>
     <a class="nav-link" href="{% url "task_add" %}">{% translate "Create task" %}</a>
+    <div class = "card mb-3">
+        <div class = "container my-3">
+           <form method="get">
+{#               {% bootstrap_form filter.form %}#}
+               {% for field in filter.form %}
+               <div class="row justify-content-start">
+                   <div class="col-3">{{ field.label_tag }}</div>
+                   <div class="col-2">{{ field }}</div>
+               </div>
+               {% endfor %}
+               <div class="row justify-content-start">
+                   <div class="col-4">
+                        <input class="btn btn-primary" type="submit" value="{{ select }}" />
+                   </div>
+               </div>
+           </form>
+        </div>
+    </div>
     <table class = "table table-striped">
         <tr>
             <th>{{ ID }}</th>
