--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -1,25 +1,19 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block page_content %}
+    <div class="container wrapper flex-grow-1">
     <h1 class="my-4"> {{ header }}</h1>
     <form method="post" action=".">
     {% csrf_token %}
-        <div class = "form">
-            <table>
             {%  for field in form %}
-                <tr>
-                    <td>{{ field.label_tag }}</td>
-                </tr>
-                <tr>
-                    <td>{{ field }}</td>
-                </tr>
+                <div class = "form-group">
+                    {{ field.label_tag }}<br>
+                    {{ field }}
+                </div>
             {% endfor %}
-                <tr><td>           </td></tr>
-                <tr>
-                    <td><input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}"></td>
-                </tr>
-
-            </table>
-        </div>
+                <div class = "form-group">
+                    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
+                </div>
     </form>
+    </div>
 {% endblock %}
