--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -9,7 +9,7 @@
     {% bootstrap_jquery %}
     <title>{% translate "Task manager" %}</title>
 </head>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
 {% include "nav.html" %}
 <main role="main" class="container">
     <div class="mt-5 p-5 bg-white rounded shadow-sm">
