--- a/task_manager/templates/nav.html
+++ b/task_manager/templates/nav.html
@@ -1,11 +1,11 @@
 {% load i18n %}
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand mr-auto mr-lg-3 h2 text-primary" href="{% url "root" %}">{% translate "Task manager" %}</a>
-    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse"  data-target="#navbarToggleExternalContent">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
       <ul class="navbar-nav mr-auto">
         <li class = "nav-item ">
             <a class="nav-item nav-link active" aria-current="page" href="{% url "user_list" %}">{% translate "Users" %}</a>
