--- a/task_manager/templates/tasks/detail.html
+++ b/task_manager/templates/tasks/detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
 {% block page_content %}
     <form method="post" action=".">
     {% csrf_token %}
