--- a/task_manager/templates/tasks/filter.html
+++ b/task_manager/templates/tasks/filter.html
@@ -2,19 +2,12 @@
     {% load bootstrap4 %}
     <div class = "container my-3">
            <form method="get">
-{#               {% for field in filter.form %}#}
-{#               <div class="row justify-content-start">#}
-{#                   <div class="col-3">{{ field.label_tag }}</div>#}
-{#                   <div class="col-2">{{ field }}</div>#}
-{#               </div>#}
-{#               {% endfor %}#}
-{#               <div class="row justify-content-start">#}
-{#                   <div class="col-4">#}
-{#                        <input class="btn btn-primary" type="submit" value="{{ select }}" />#}
-{#                   </div>#}
-{#               </div>#}
-               {% bootstrap_form filter.form %}
-               <div class="col-4">
+               {% for field in filter.form %}
+               <div class="form-group">
+                    {% bootstrap_field field %}
+               </div>
+               {% endfor %}
+               <div class="form-group">
                         <input class="btn btn-primary" type="submit" value="{{ select }}" />
                    </div>
            </form>
