--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -8,13 +8,10 @@
         <form method="post" action=".">
             {% csrf_token %}
             {%  for field in form %}
-                <div class = "form-group">
-                    {% bootstrap_field field %}
-                </div>
+                {% bootstrap_field field %}
             {% endfor %}
-                <div class = "form-group">
-                    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
-                </div>
+
+                {% bootstrap_button button_title button_type="submit" button_class="mt-3 btn btn-primary" %}
     </form>
     </div>
 {% endblock %}
