--- a/task_manager/templates/marks/create.html
+++ b/task_manager/templates/marks/create.html
@@ -12,7 +12,7 @@
                 </div>
             {% endfor %}
                 <div class = "form-group">
-                    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
+                     {% bootstrap_button button_title button_type="submit" button_class="mt-3 btn btn-primary" %}
                 </div>
         </div>
     </form>
