--- a/task_manager/templates/tasks/create.html
+++ b/task_manager/templates/tasks/create.html
@@ -7,12 +7,10 @@
         <h1 class="my-4"> {{ header }}</h1>
         <div class = "form">
             {%  for field in form %}
-                <div class = "form-group">
                  {% bootstrap_field field %}
-                </div>
             {% endfor %}
                 <div class = "form-group">
-                    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
+                     {% bootstrap_button button_title button_type="submit" button_class="mt-3 btn btn-primary" %}
                 </div>
         </div>
     </form>
