add bootstrap buttons to delete views

--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
 {% block page_content %}
     <h1 class="my-4"> {{ header }}</h1>
     <form method="post" action=".">
     {% csrf_token %}
         <p>{{ message }} "{{ object }}"  ?</p>
-    <input class="mt-3 btn btn-primary" type="submit" value="{{ button_title }}">
+    {% bootstrap_button button_title button_type="submit" button_class="btn btn-danger" %}
     </form>
 {% endblock %}
