--- a/task_manager/templates/tasks/filter.html
+++ b/task_manager/templates/tasks/filter.html
@@ -8,7 +8,7 @@
                </div>
                {% endfor %}
                <div class="form-group">
-                     {% bootstrap_button button_title button_type="submit" button_class="mt-3 btn btn-primary" %}
+                     {% bootstrap_button select button_type="submit" button_class="mt-3 btn btn-primary" %}
                    </div>
            </form>
         </div>
