--- a/task_manager/templates/tasks/detail.html
+++ b/task_manager/templates/tasks/detail.html
@@ -31,7 +31,7 @@
               </div>
             <div class="row p-2">
                 <div class="col">{{ labels }}:
-                {% if task.mark %}
+                {% if task.label %}
                     <ul>
                     {%  for label in task.label.all %}
                         <li>{{ label.name }}</li>
